--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/FindikSepeti_Remake.styles.css" asp-append-version="true" />
+    <link href="~/css/output.css" rel="stylesheet" />
 </head>
 <body>
     <header>
