--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/FindikSepeti_Remake.styles.css" asp-append-version="true" />
-    <link href="~/css/output.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/css/styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
@@ -35,6 +35,8 @@
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
+
+        <p class="text-sky-400">The quick brown fox...</p>
     </div>
 
     <footer class="border-top footer text-muted">
