--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,4 +2,18 @@
     ViewData["Title"] = "Home Page";
 }
 
-merhaba ke.
+<div class="py-32">
+        <!-- Hero bölümü container'ı -->
+        <div class="container mx-auto flex flex-col items-start text-left">
+            <!-- Başlık -->
+            <h1 class="text-4xl sm:text-5xl lg:text-6xl font-bold mb-4 z-10">Hoş Geldiniz!</h1>
+            <!-- Açıklama -->
+            <p class="text-lg sm:text-xl lg:text-2xl mb-8 z-10">Uygulamanın harika özelliklerini keşfedin.</p>
+            <!-- Buton -->
+            <button class="bg-orange-800 hover:bg-orange-900 text-white font-bold py-2 px-4 rounded-full z-10">Başla</button>
+        </div>
+        <!-- Resim overlay -->
+        <div class="absolute inset-0"></div>
+        <!-- Arka plan resmi -->
+    <img style="height: 80vh;" class="absolute inset-0 object-cover w-full h-full" src="~/images/banner_2.webp" alt="Hero resmi">
+    </div>
