--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,13 +27,13 @@
 				</button>
 			</div>
 			<div class="hidden lg:flex lg:gap-x-12">
-				<a asp-c class="text-lg font-semibold leading-6">Ana Sayfa</a>
-				<a href="#" class="text-lg font-semibold leading-6">Mağaza</a>
-				<a href="#" class="text-lg font-semibold leading-6">Hakkımızda</a>
-				<a href="#" class="text-lg font-semibold leading-6">İletişim</a>
+				<a asp-c class="text-lg font-semibold leading-6 text-white">Ana Sayfa</a>
+				<a href="#" class="text-lg font-semibold leading-6 text-white">Mağaza</a>
+				<a href="#" class="text-lg font-semibold leading-6 text-white">Hakkımızda</a>
+				<a href="#" class="text-lg font-semibold leading-6 text-white">İletişim</a>
 			</div>
 			<div class="hidden lg:flex lg:flex-1 lg:justify-end">
-				<a href="#" class="text-lg font-semibold leading-6">Log in <span aria-hidden="true">&rarr;</span></a>
+				<a href="#" class="text-lg font-semibold leading-6 text-white">Log in <span aria-hidden="true">&rarr;</span></a>
 			</div>
 		</nav>
 		<!-- Mobile menu, show/hide based on menu open state. -->
