--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,32 +12,34 @@
 	<link href="~/css/font/css/all.min.css" rel="stylesheet" />
 </head>
 <body class="bg-orange-100 text-white">
-    <header class="rounded-full text-lime-900 fixed inset-x-0 top-0 z-50 bg-white w-5/6 place-self-center">
-        <nav class="flex items-center justify-between p-3 lg:px-8" aria-label="Global">
-            <div class="ml-2 flex lg:flex-1 items-center lg:gap-x-6">
-                <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700"><i class="fa-solid fa-cart-shopping"></i></a>
-                <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700">AnaSayfa</a>
-                <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700">Mağaza</a>
-            </div>
-            <div class="flex lg:hidden">
-                <button type="button" class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700">
-                    <span class="sr-only">Open main menu</span>
-                    <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-                    </svg>
-                </button>
-            </div>
-            <div class="hidden lg:flex lg:gap-x-12">
-                <a href="#" class="-m-1.5 p-1.5 flex items-center">
-                    <img class="h-9 w-auto" src="~/images/logo_test.png" alt=""><span class="pl-2 text-lg text-lime-900 hover:text-lime-700">Fındık Sepeti</span>
-                </a>
-            </div>
-            <div class="mr-2 hidden lg:flex lg:flex-1 lg:justify-end lg:gap-x-6">
-                <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700">Hakkımızda</a>
-                <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700">İletişim</a>
-                <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700"><i class="fa-solid fa-user"></i></a>
-            </div>
-        </nav>
+    <div class="justify-center flex">
+        <header class="rounded-full text-lime-900 fixed top-0 z-50 bg-white w-5/6">
+            <nav class="flex items-center justify-between p-3 lg:px-8" aria-label="Global">
+                <div class="ml-2 flex lg:flex-1 items-center lg:gap-x-6">
+                    <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700"><i class="fa-solid fa-cart-shopping"></i></a>
+                    <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700">AnaSayfa</a>
+                    <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700">Mağaza</a>
+                </div>
+                <div class="flex lg:hidden">
+                    <button type="button" class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700">
+                        <span class="sr-only">Open main menu</span>
+                        <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+                        </svg>
+                    </button>
+                </div>
+                <div class="hidden lg:flex lg:gap-x-12">
+                    <a href="#" class="-m-1.5 p-1.5 flex items-center">
+                        <img class="h-9 w-auto" src="~/images/logo_test.png" alt=""><span class="pl-2 text-lg text-lime-900 hover:text-lime-700">Fındık Sepeti</span>
+                    </a>
+                </div>
+                <div class="mr-2 hidden lg:flex lg:flex-1 lg:justify-end lg:gap-x-6">
+                    <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700">Hakkımızda</a>
+                    <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700">İletişim</a>
+                    <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700"><i class="fa-solid fa-user"></i></a>
+                </div>
+            </nav>
+        </header>
         <!-- Mobile menu, show/hide based on menu open state. -->
         <div class="lg:hidden" role="dialog" aria-modal="true">
             <!-- Background backdrop, show/hide based on slide-over state. -->
@@ -69,7 +71,8 @@
                 </div>
             </div>
         </div>
-    </header>
+    </div>
+    
 	<div>
 		<main role="main" class="pb-3">
 			@RenderBody()
