--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,83 +4,72 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>@ViewData["Title"] - FindikSepeti_Remake</title>
-	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-	<link rel="stylesheet" href="~/FindikSepeti_Remake.styles.css" asp-append-version="true" />
 	<link rel="stylesheet" href="~/css/styles.css" asp-append-version="true" />
 	<link href="~/css/font/css/all.css" rel="stylesheet" />
 	<link href="~/css/font/css/all.min.css" rel="stylesheet" />
+	<link href="~/css/custom.css" rel="stylesheet" />
 </head>
-<body class="bg-orange-100 text-white">
-    <div class="justify-center flex">
-        <header class="rounded-full text-lime-900 fixed top-0 z-50 bg-white w-5/6">
+<body class="text-white">
+    <div class="justify-center items-center flex">
+        <header class="text-lime-900  fixed z-50 bg-white rounded-3xl navbar">
             <nav class="flex items-center justify-between p-3 lg:px-8" aria-label="Global">
-                <div class="ml-2 flex lg:flex-1 items-center lg:gap-x-6">
-                    <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700"><i class="fa-solid fa-cart-shopping"></i></a>
-                    <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700">AnaSayfa</a>
-                    <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700">Mağaza</a>
+                <div class="hidden lg:flex lg:flex-1 items-center lg:gap-x-6">
+                    <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700 txtOpa">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                    </a>
+                    <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700 txtOpa">Ana Sayfa</a>
+                    <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700 txtOpa">Mağaza</a>
                 </div>
-                <div class="flex lg:hidden">
-                    <button type="button" class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700">
+                <div class="lg:flex lg:gap-x-12">
+                    <a asp-controller="Home" asp-action="Index" class="-m-1.5 p-1.5 flex items-center">
+                        <img class="h-9 w-auto" src="~/images/logo_test.png" alt=""><span class="pl-2 text-lg hover:text-lime-700">Fındık Sepeti</span>
+					</a>
+                </div>
+                <div class="ml-4 flex lg:hidden">
+                    <button type="button"
+                            class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700 hover:text-gray-900 txtOpa" id="menuButton">
                         <span class="sr-only">Open main menu</span>
-                        <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                        <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                             aria-hidden="true">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
                         </svg>
                     </button>
                 </div>
-                <div class="hidden lg:flex lg:gap-x-12">
-                    <a href="#" class="-m-1.5 p-1.5 flex items-center">
-                        <img class="h-9 w-auto" src="~/images/logo_test.png" alt=""><span class="pl-2 text-lg text-lime-900 hover:text-lime-700">Fındık Sepeti</span>
+                <div class="hidden lg:flex lg:flex-1 lg:justify-end lg:gap-x-6">
+                    <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700 txtOpa">Hakkımızda</a>
+                    <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700 txtOpa">İletişim</a>
+                    <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700 txtOpa">
+                        <i class="fa-solid fa-user"></i>
                     </a>
-                </div>
-                <div class="mr-2 hidden lg:flex lg:flex-1 lg:justify-end lg:gap-x-6">
-                    <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700">Hakkımızda</a>
-                    <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700">İletişim</a>
-                    <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700"><i class="fa-solid fa-user"></i></a>
                 </div>
             </nav>
-        </header>
-        <!-- Mobile menu, show/hide based on menu open state. -->
-        <div class="lg:hidden" role="dialog" aria-modal="true">
-            <!-- Background backdrop, show/hide based on slide-over state. -->
-            <div class="fixed inset-y-0 right-0 z-50 w-full overflow-y-auto bg-white px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10">
-                <div class="flex items-center justify-between">
-                    <a href="#" class="-m-1.5 p-1.5">
-                        <span class="sr-only">Your Company</span>
-                        <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="">
-                    </a>
-                    <button type="button" class="-m-2.5 rounded-md p-2.5 text-gray-700">
-                        <span class="sr-only">Close menu</span>
-                        <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-                        </svg>
-                    </button>
-                </div>
-                <div class="mt-6 flow-root">
-                    <div class="-my-6 divide-y divide-gray-500/10">
-                        <div class="space-y-2 py-6">
-                            <a asp-controller="Home" asp-action="Index" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Product</a>
-                            <a asp-controller="Home" asp-action="Index" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Features</a>
-                            <a asp-controller="Home" asp-action="Index" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Marketplace</a>
-                            <a asp-controller="Home" asp-action="Index" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Company</a>
-                        </div>
-                        <div class="py-6">
-                            <a href="#" class="-mx-3 block rounded-lg px-3 py-2.5 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Log in</a>
-                        </div>
-                    </div>
-                </div>
+            <!-- Mobile menu, show/hide based on menu open state. -->
+            <div class="lg:hidden rounded-lg" id="mobileMenu" style="display: none;">
+                <a asp-controller="Home" asp-action="Index" class="block py-2 px-4 text-lg font-semibold leading-6 text-lime-900 hover:bg-lime-100">
+                    Ana
+                    Sayfa
+                </a>
+                <a asp-controller="Home" asp-action="Index" class="block py-2 px-4 text-lg font-semibold leading-6 text-lime-900 hover:bg-lime-100">Mağaza</a>
+                <a asp-controller="Home" asp-action="Index"
+                   class="block py-2 px-4 text-lg font-semibold leading-6 text-lime-900 hover:bg-lime-100">Hakkımızda</a>
+                <a asp-controller="Home" asp-action="Index" class="block py-2 px-4 text-lg font-semibold leading-6 text-lime-900 hover:bg-lime-100">İletişim</a>
+                <a asp-controller="Home" asp-action="Index" class="block py-2 px-4 text-lg font-semibold leading-6 text-lime-900 hover:bg-lime-100">
+                    <i class="fa-solid fa-user"></i>
+                </a>
+                <a asp-controller="Home" asp-action="Index" class="block py-2 px-4 text-lg font-semibold leading-6 text-lime-900 hover:bg-lime-100">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </a>
             </div>
-        </div>
+        </header>
     </div>
-    
-	<div>
-		<main role="main" class="pb-3">
+
+    <div id="arkaplan">
+		<main role="main" class="pb-3 other-content">
 			@RenderBody()
 		</main>
 	</div>
 
 	<script src="~/lib/jquery/dist/jquery.min.js"></script>
-	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="~/js/site.js" asp-append-version="true"></script>
 	@await RenderSectionAsync("Scripts", required: false)
 </body>
