--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,10 +4,10 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>@ViewData["Title"] - FindikSepeti_Remake</title>
-	<link rel="stylesheet" href="~/css/styles.css" asp-append-version="true" />
-	<link href="~/css/font/css/all.css" rel="stylesheet" />
-	<link href="~/css/font/css/all.min.css" rel="stylesheet" />
-	<link href="~/css/custom.css" rel="stylesheet" />
+	<link href="~/css/test.css" rel="stylesheet" />
+    <link href="~/css/font/css/all.css" rel="stylesheet" />
+    <link href="~/css/font/css/all.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/css/styles.css" asp-append-version="true" />
 </head>
 <body class="text-white">
     <div class="justify-center items-center flex">
