--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,21 +4,20 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>@ViewData["Title"] - FindikSepeti_Remake</title>
-	<link href="~/css/test.css" rel="stylesheet" />
     <link href="~/css/font/css/all.css" rel="stylesheet" />
     <link href="~/css/font/css/all.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/styles.css" asp-append-version="true" />
 </head>
-<body class="text-white">
+<body class="text-white arkaplan">
     <div class="justify-center items-center flex">
-        <header class="text-lime-900  fixed z-50 bg-white rounded-3xl navbar">
+        <header class="text-lime-900  fixed z-50 bg-white rounded-3xl navbar lg:w-5/6 w-3/4">
             <nav class="flex items-center justify-between p-3 lg:px-8" aria-label="Global">
                 <div class="hidden lg:flex lg:flex-1 items-center lg:gap-x-6">
                     <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700 txtOpa">
                         <i class="fa-solid fa-cart-shopping"></i>
                     </a>
-                    <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700 txtOpa">Ana Sayfa</a>
                     <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700 txtOpa">Mağaza</a>
+                    <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700 txtOpa">Alım Satım</a>
                 </div>
                 <div class="lg:flex lg:gap-x-12">
                     <a asp-controller="Home" asp-action="Index" class="-m-1.5 p-1.5 flex items-center">
@@ -36,8 +35,8 @@
                     </button>
                 </div>
                 <div class="hidden lg:flex lg:flex-1 lg:justify-end lg:gap-x-6">
-                    <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700 txtOpa">Hakkımızda</a>
-                    <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700 txtOpa">İletişim</a>
+                    <a asp-controller="Home" asp-action="About" class="text-lg font-semibold leading-6 hover:text-lime-700 txtOpa">Hakkımızda</a>
+                    <a asp-controller="Home" asp-action="Contact" class="text-lg font-semibold leading-6 hover:text-lime-700 txtOpa">İletişim</a>
                     <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700 txtOpa">
                         <i class="fa-solid fa-user"></i>
                     </a>
@@ -50,9 +49,10 @@
                     Sayfa
                 </a>
                 <a asp-controller="Home" asp-action="Index" class="block py-2 px-4 text-lg font-semibold leading-6 text-lime-900 hover:bg-lime-100">Mağaza</a>
-                <a asp-controller="Home" asp-action="Index"
+                <a asp-controller="Home" asp-action="Index" class="block py-2 px-4 text-lg font-semibold leading-6 text-lime-900 hover:bg-lime-100">Alım Satım</a>
+                <a asp-controller="Home" asp-action="About"
                    class="block py-2 px-4 text-lg font-semibold leading-6 text-lime-900 hover:bg-lime-100">Hakkımızda</a>
-                <a asp-controller="Home" asp-action="Index" class="block py-2 px-4 text-lg font-semibold leading-6 text-lime-900 hover:bg-lime-100">İletişim</a>
+                <a asp-controller="Home" asp-action="Contact" class="block py-2 px-4 text-lg font-semibold leading-6 text-lime-900 hover:bg-lime-100">İletişim</a>
                 <a asp-controller="Home" asp-action="Index" class="block py-2 px-4 text-lg font-semibold leading-6 text-lime-900 hover:bg-lime-100">
                     <i class="fa-solid fa-user"></i>
                 </a>
