--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -69,7 +69,7 @@
     window.onload = function () {
         // Navbar'daki belirli sınıfları kaldır
         var navbar = document.querySelector('.navbar');
-        navbar.classList.remove('lg:w-5/6', 'w-3/4');
+        navbar.classList.remove('lg:w-5/6', 'w-3/4', 'top-0');
     };
     window.addEventListener('load', () => {
         // 3 saniye sonra çalışacak olan kodu setTimeout ile belirtiyoruz
@@ -77,6 +77,10 @@
             // Sayfa yüklendiğinde navbar'a 'navbar-loaded' sınıfını ekle
             document.querySelector('.navbar').classList.add('navbar-loaded');
         }, 1000);
+        setTimeout(() => {
+            // Sayfa yüklendiğinde navbar'a 'navbar-loaded' sınıfını ekle
+            document.querySelector('.navbar').classList.add('top-0');
+        }, 3500);
         setTimeout(() => {
             // Sayfa yüklendiğinde navbar'a 'navbar-loaded' sınıfını ekle
             document.querySelector('.navbar').classList.add('lg:w-5/6', 'w-3/4');
