--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body class="text-white arkaplan">
     <div class="justify-center items-center flex">
-        <header class="text-lime-900  fixed z-50 bg-white rounded-3xl navbar lg:w-5/6 w-3/4">
+        <header class="text-lime-900  fixed z-50 bg-white rounded-3xl navbar lg:w-5/6 w-3/4 top-0">
             <nav class="flex items-center justify-between p-3 lg:px-8" aria-label="Global">
                 <div class="hidden lg:flex lg:flex-1 items-center lg:gap-x-6">
                     <a asp-controller="Home" asp-action="Index" class="text-lg font-semibold leading-6 hover:text-lime-700 txtOpa">
